--- a/charts/wireguard/Chart.yaml
+++ b/charts/wireguard/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wireguard
 description: Using the offical linuxserver/wireguard image with almost any environment variables for K8S. Supporting server and client mode.
 type: application
-version: 0.1.4
+version: 0.1.5
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wireguard/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -11,7 +11,7 @@ sources:
   - https://github.com/linuxserver/docker-wireguard
   - https://github.com/slydlake/helm-charts
 annotations:
-  category: Database
+  category: Security
   images: |
     - name: wireguard
       image: docker.io/linuxserver/wireguard:latest
