--- a/charts/wireguard/templates/secrets.yaml
+++ b/charts/wireguard/templates/secrets.yaml
@@ -12,7 +12,7 @@ stringData:
     [Interface]
     {{- $secret := lookup "v1" "Secret" .Release.Namespace .Values.wireguard.client.config.existingSecret -}}
     {{- if $secret }}
-    {{- $privatekey := default "" $secret.data.interfacePrivateKey }}
+    {{- $privatekey := default "" $secret.data.privatekey }}
     PrivateKey = {{ $privatekey | b64dec }}
     {{- else }}
     PrivateKey = 
@@ -24,14 +24,14 @@ stringData:
     [Peer]
     {{- $secret := lookup "v1" "Secret" .Release.Namespace .Values.wireguard.client.config.existingSecret -}}
     {{- if $secret }}
-    {{- $publickey := default "" $secret.data.peerPublicKey }}
+    {{- $publickey := default "" $secret.data.publickey }}
       PublicKey = {{ $publickey | b64dec }}
     {{- else }}
       PublicKey = 
     {{- end }}
     {{- $secret := lookup "v1" "Secret" .Release.Namespace .Values.wireguard.client.config.existingSecret -}}
     {{- if $secret }}
-    {{- $presharedkey := default "" $secret.data.peerPresharedKey }}
+    {{- $presharedkey := default "" $secret.data.presharedkey }}
       PresharedKey = {{ $presharedkey | b64dec }}
     {{- else }}
       PresharedKey = 
