--- a/charts/wireguard/templates/tests/test-connection.yaml
+++ b/charts/wireguard/templates/tests/test-connection.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: "{{ include "wireguard.fullname" . }}-test-udp"
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "wireguard.labels" . | nindent 4 }}
   annotations:
