wireguard: add sample secret file

--- a/charts/wireguard/Chart.yaml
+++ b/charts/wireguard/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wireguard
 description: Using the offical linuxserver/wireguard image with almost any environment variables for K8S. Supporting server and client mode.
 type: application
-version: 0.1.7
+version: 0.1.8
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wireguard/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -21,9 +21,11 @@ annotations:
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
     - kind: changed
-    description: readme updated
-    - kind: fixed
-    description: secret names simplified
+    description: updated sample yaml files (values.client.test.yaml, values.server.test.yaml)
+    - kind: changed
+    description: updated readme
+    - kind: added
+    description: sample secret file into repo
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wireguard
