--- a/charts/wireguard/values.server.test.yaml
+++ b/charts/wireguard/values.server.test.yaml
@@ -129,7 +129,7 @@ wireguard:
       # mtu: 1420
 
       # Persistent keepalive in seconds, 0 to disable, default is 25
-      # persistentKeepalive: 25
+      persistentKeepalive: 25
 
       # Endpoint ip or hostname with port of the WireGuard server
       endpoint: "server.wireguard.svc.cluster.local:51820"
