artifacthub-repo.yml aktualisieren

--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -2,4 +2,4 @@
 repositoryID: d3f6ad16-a203-4439-842f-c76bd70fbbce
 owners: # (optional, used to claim repository ownership)
   - name: slydlake
-    email: slydlake@gmail.com
+    email: sly.dlake@gmail.com
