--- a/charts/wireguard/secret.client.test.yaml
+++ b/charts/wireguard/secret.client.test.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: client-secret
-  namespace: wg-easy
+  namespace: wireguard
 type: Opaque
 stringData:
   privatekey: ...
@@ -13,7 +13,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name:  client-secret-full
-  namespace: wg-easy
+  namespace: wireguard
 type: opaque
 stringData:
   wg0.conf: |-
