--- a/charts/wireguard/templates/deployment.yaml
+++ b/charts/wireguard/templates/deployment.yaml
@@ -36,6 +36,17 @@ spec:
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.dnsPolicy }}
+      dnsPolicy: {{ .Values.dnsPolicy }}
+      {{- end }}
+      {{- with .Values.dnsConfig }}
+      dnsConfig:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.initContainers }}
+      initContainers:
+        {{- toYaml .Values.initContainers | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -83,6 +94,7 @@ spec:
             {{- toYaml .Values.wireguard.extraEnvVars | nindent 12 }}
             {{- end }}
           {{- end }}
+          {{- if or .Values.wireguard.extraEnvVarsCM .Values.wireguard.extraEnvVarsSecret }}
           envFrom:
             {{- if .Values.wireguard.extraEnvVarsCM }}
             - configMapRef:
@@ -92,6 +104,7 @@ spec:
             - secretRef:
                 name: {{ .Values.wireguard.extraEnvVarsSecret }}
             {{- end }}
+          {{- end }}
           {{- if .Values.wireguard.server.enabled }}
           ports:
             - name: wg-port
@@ -106,9 +119,9 @@ spec:
             {{- toYaml (omit .Values.livenessProbe "enabled") | nindent 12 }}
             exec:
               command:
-              - /bin/sh
-              - -c
-              - 'ip link show dev wg0 | grep -s up'
+                - /bin/sh
+                - -c
+                - 'ip link show dev wg0 | grep -s up'
           {{- end }}
           {{- if .Values.customReadinessProbe }}
           readinessProbe:
@@ -144,20 +157,23 @@ spec:
             {{- if .Values.extraVolumeMounts }}
             {{- toYaml .Values.extraVolumeMounts | nindent 12 }}
             {{- end }}
-      volumes:
-      - name: {{ include "wireguard.fullname" . }}
-      {{- if .Values.wireguard.existingSecret }}
-        secret:
-          secretName: {{ .Values.wireguard.existingSecret }}
-      {{- else }}
-        {{- if .Values.wireguard.server.enabled }}
-        persistentVolumeClaim:
-          claimName: {{ if .Values.wireguard.server.storage.existingClaim }}{{ .Values.wireguard.server.storage.existingClaim }}{{ else }}{{ include "wireguard.fullname" . }}{{ end }}
-        {{- else if .Values.wireguard.client.enabled }}
-        secret:
-          secretName: {{ include "wireguard.fullname" . }}
-        {{- end }}
+      {{- with .Values.sidecars }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
+      volumes:
+        - name: {{ include "wireguard.fullname" . }}
+        {{- if .Values.wireguard.existingSecret }}
+          secret:
+            secretName: {{ .Values.wireguard.existingSecret }}
+        {{- else }}
+          {{- if .Values.wireguard.server.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ if .Values.wireguard.server.storage.existingClaim }}{{ .Values.wireguard.server.storage.existingClaim }}{{ else }}{{ include "wireguard.fullname" . }}{{ end }}
+          {{- else if .Values.wireguard.client.enabled }}
+          secret:
+            secretName: {{ include "wireguard.fullname" . }}
+          {{- end }}
+        {{- end }}
       {{- if .Values.extraVolumes }}
         {{- toYaml .Values.extraVolumes | nindent 8 }}
       {{- end }}
