--- a/charts/wireguard/values.client.test.yaml
+++ b/charts/wireguard/values.client.test.yaml
@@ -16,6 +16,22 @@ fullnameOverride: "client"
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
 
+# DNS policy and configuration of the pod
+# E.g.
+# dnsPolicy: None
+# dnsConfig:
+#   searchers:
+#     - svc.cluster.local
+#     - cluster.local
+#   nameservers:
+#     - 1.1.1.1
+#     - 8.8.8.8
+
+# dnsPolicy: ClusterFirst
+# dnsConfig: {}
+
+
+
 # deployment strategy type
 # NOTE: Set it to `Recreate` if you use a PersistentVolume that cannot be mounted on multiple pods
 # E.g.
@@ -26,6 +42,21 @@ replicaCount: 1
 #   type: RollingUpdate
 updateStrategy:
   type: RollingUpdate
+
+# Init containers
+# initContainers:
+#   - name: do-something
+#     image: busybox
+#     command: ['do', 'something']
+initContainers: []
+
+# Sidecar containers
+# E.g.
+#  sidecars:
+#   - name: container-name
+#     image: image-name
+#     imagePullPolicy: Always
+sidecars: []
 
 # Wireguard specific configuration
 # wireguard client and server will always use the wg0 interface
@@ -46,7 +77,7 @@ wireguard:
 
   # extra environment variables to set in the wireguard container
   # E.g.
-  ## extraEnvVars:
+  # extraEnvVars:
   # - name: MY_ENV_VAR
   #   value: my-value
   extraEnvVars: []
@@ -60,7 +91,7 @@ wireguard:
   # Use existing secret for the wireguard configuration. The secret has to contain the stringData wg0.conf
   # This must contain the FULL wireguard configuration file (in client or server mode)
   # NOTE: When it's set the wireguard.server.config or wireguard.client.config are ignored
-  #existingSecret: "client-secret-full"
+  existingSecret: "wg-client-config"
 
   # server mode
   server:
@@ -90,6 +121,7 @@ wireguard:
     # Use this to set values of the wireguard configuration instead of existingSecret
     config:
       # External IP or domain name. If set to auto, the container will try to determine and set the external IP automatically (for a static IP address)
+      # This address will be used by the WireGuard clients to connect to the server
       # address: vpn.example.com
 
       # see for more information https://github.com/linuxserver/docker-wireguard?tab=readme-ov-file#user--group-identifiers
@@ -102,7 +134,7 @@ wireguard:
       # peers: "test"
 
       # Internal subnet for the wireguard and server and peers (only change if it clashes). default 10.13.13.0/24
-      # subnet: "10.13.13.0/24"
+      # subnet: "10.8.0.0/24"
 
       # set to all or a list of comma separated peers (ie. 1,4,laptop) for the wireguard server to send keepalive packets to listed peers every 25 seconds.
       # Useful if server is accessed via domain name and has dynamic IP. Default = "all"
@@ -119,10 +151,10 @@ wireguard:
     config:
       # This secret must used for the complete client configuation. Use this information from your peer configuration of the wireguard server
       # The secret has to contain the keys "privatekey", "publickey", "presharedkey"
-      existingSecret: "client-secret"
+      existingSecret: ""
 
       # Address to assign to the WireGuard peer
-      address: "10.13.13.2/24"
+      address: "10.8.0.2/24"
 
       # MTU. Default is 1420
       # mtu: 1420
@@ -131,7 +163,7 @@ wireguard:
       persistentKeepalive: 25
 
       # Endpoint ip or hostname with port of the WireGuard server
-      endpoint: "server.wireguard.svc.cluster.local:51820"
+      endpoint: "server-wireguard.wireguard.svc.cluster.local:51820"
 
 # This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
 serviceAccount:
@@ -150,13 +182,19 @@ serviceAccount:
 podAnnotations: {}
 # This is for setting Kubernetes Labels to a Pod.
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-podLabels: {}
+podLabels:
+  role: gateway
 
 podSecurityContext: {}
   # fsGroup: 2000
 
 # Container Security Context
-securityContext: {}
+
+securityContext:
+  privileged: true
+  sysctls:
+    - name: net.ipv4.ip_forward
+      value: "1"
 # when used as server
   # allowPrivilegeEscalation: true
   # capabilities:
