--- a/charts/wireguard/values.yaml
+++ b/charts/wireguard/values.yaml
@@ -16,6 +16,22 @@ fullnameOverride: ""
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
 
+# DNS policy and configuration of the pod
+# E.g.
+# dnsPolicy: None
+# dnsConfig:
+#   searchers:
+#     - svc.cluster.local
+#     - cluster.local
+#   nameservers:
+#     - 1.1.1.1
+#     - 8.8.8.8
+
+# dnsPolicy: ClusterFirst
+# dnsConfig: {}
+
+
+
 # deployment strategy type
 # NOTE: Set it to `Recreate` if you use a PersistentVolume that cannot be mounted on multiple pods
 # E.g.
@@ -26,6 +42,21 @@ replicaCount: 1
 #   type: RollingUpdate
 updateStrategy:
   type: RollingUpdate
+
+# Init containers
+# initContainers:
+#   - name: do-something
+#     image: busybox
+#     command: ['do', 'something']
+initContainers: []
+
+# Sidecar containers
+# E.g.
+#  sidecars:
+#   - name: container-name
+#     image: image-name
+#     imagePullPolicy: Always
+sidecars: []
 
 # Wireguard specific configuration
 # wireguard client and server will always use the wg0 interface
@@ -46,7 +77,7 @@ wireguard:
 
   # extra environment variables to set in the wireguard container
   # E.g.
-  ## extraEnvVars:
+  # extraEnvVars:
   # - name: MY_ENV_VAR
   #   value: my-value
   extraEnvVars: []
