changed: wireguard Chart.yaml - updated version to 0.1.10 added: wireguard values.schema.json - added hooks for preUp, postUp, preDown, postDown changed: wireguard values.client.test.yaml - updated comments for clarity changed: wireguard values.server.test.yaml - updated comments for clarity changed: wireguard values.yaml - updated comments for clarity

--- a/charts/wireguard/templates/secrets.yaml
+++ b/charts/wireguard/templates/secrets.yaml
@@ -20,6 +20,18 @@ stringData:
     Address = {{ .Values.wireguard.client.config.address }}
     DNS = {{- if .Values.wireguard.dns }} {{ .Values.wireguard.dns }} {{- else }} 1.1.1.1, 2606:4700:4700::1111 {{- end }}
     MTU = {{- if .Values.wireguard.client.config.mtu }} {{ .Values.wireguard.client.config.mtu }} {{- else }} 1420 {{- end }}
+    {{- if .Values.wireguard.client.config.preUp }}
+    PreUp = {{ .Values.wireguard.client.config.preUp }}
+    {{- end }}
+    {{- if .Values.wireguard.client.config.postUp }}
+    PostUp = {{ .Values.wireguard.client.config.postUp }}
+    {{- end }}
+    {{- if .Values.wireguard.client.config.preDown }}
+    PreDown = {{ .Values.wireguard.client.config.preDown }}
+    {{- end }}
+    {{- if .Values.wireguard.client.config.postDown }}
+    PostDown = {{ .Values.wireguard.client.config.postDown }}
+    {{- end }}
 
     [Peer]
     {{- $secret := lookup "v1" "Secret" .Release.Namespace .Values.wireguard.client.config.existingSecret -}}
