changed: wg-easy Chart.yaml - updated version to 0.1.4 added: wg-easy values.schema.json - added updateStrategy, initContainers, dnsPolicy, dnsConfig, and sidecars support changed: wg-easy readme.md - updated helm install command to use slycharts added: wg-easy values.yaml - added dnsPolicy, dnsConfig, updateStrategy, initContainers, and sidecars

--- a/charts/wg-easy/templates/statefulset.yaml
+++ b/charts/wg-easy/templates/statefulset.yaml
@@ -12,6 +12,9 @@ spec:
   selector:
     matchLabels:
       {{- include "wg-easy.selectorLabels" . | nindent 6 }}
+  {{- if .Values.updateStrategy }}
+  strategy: {{- toYaml .Values.updateStrategy | nindent 4 }}
+  {{- end }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -45,6 +48,17 @@ spec:
                 - SYS_MODULE
             privileged: true
           {{- end }}
+      {{- if .Values.dnsPolicy }}
+      dnsPolicy: {{ .Values.dnsPolicy }}
+      {{- end }}
+      {{- with .Values.dnsConfig }}
+      dnsConfig:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.initContainers }}
+      initContainers:
+        {{- toYaml .Values.initContainers | nindent 8 }}
+      {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
@@ -160,6 +174,9 @@ spec:
             {{- if .Values.extraVolumeMounts }}
             {{- toYaml .Values.extraVolumeMounts | nindent 12 }}
             {{- end }}
+      {{- with .Values.sidecars }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       volumes:
       {{- if .Values.config.init.existingSecret }}
       - name: {{ .Values.config.init.existingSecret }}
