--- a/charts/wg-easy/Chart.yaml
+++ b/charts/wg-easy/Chart.yaml
@@ -2,32 +2,33 @@ apiVersion: v2
 name: wg-easy
 description: Using the offical wg-easy/wg-easy image with almost any environment variables for K8s. Supporting Init Mode.
 type: application
-version: 0.1.3
+version: 0.1.4
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wg-easy/app.png
-appVersion: "15.1.0"
 home: https://github.com/slydlake/helm-charts
 maintainers:
   - name: slydlake
 sources:
-  - https://wg-easy.github.io/wg-easy/latest/
   - https://github.com/slydlake/helm-charts
 annotations:
   artifacthub.io/category: security
   artifacthub.io/license: GPL-3.0
   artifacthub.io/links: |
-    - name: GitHub Repository
+    - name: SlyCharts GitHub Repository
       url: https://github.com/slydlake/helm-charts/tree/main/charts/wg-easy
+    - name: Offical wg-easy Documentation
+      url: https://wg-easy.github.io/wg-easy/latest/
   artifacthub.io/maintainers: |
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: changed
-      description: "Updated values schema required fields"
+    - kind: added
+      description: "updateStrategy, Init containers support, sidecar support, dnsPolicy and dnsConfig support"
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wireguard
       image: ghcr.io/wg-easy/wg-easy:latest
   category: Security
+appVersion: "15"
 keywords:
   - wireguard
   - vpn
