#4 fix allow externalIPs in service type LoadBalancer

--- a/charts/wg-easy/templates/service.yaml
+++ b/charts/wg-easy/templates/service.yaml
@@ -44,5 +44,11 @@ spec:
       {{- if eq .Values.service.wireguard.type "NodePort" }}
       nodePort: {{ .Values.service.wireguard.nodePort }}
       {{- end }}
+      {{- if eq .Values.service.wireguard.type "LoadBalancer" }}
+      {{- if .Values.service.wireguard.externalIPs }}
+      externalIPs:
+        {{- toYaml .Values.service.wireguard.externalIPs | nindent 8}}
+      {{- end }}
+      {{- end }}
   selector:
     {{- include "wg-easy.selectorLabels" . | nindent 4 }}
