--- a/charts/wireguard/Chart.yaml
+++ b/charts/wireguard/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wireguard
 description: "Using the offical linuxserver/wireguard image with almost any environment variables for K8S. Supporting server and client mode."
 type: application
-version: 0.1.11
+version: 0.1.12
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wireguard/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -21,8 +21,12 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
+    - kind: added
+      description: "externalIPs in service type LoadBalancer. Thanks to b4u-mw"
+      url: https://github.com/slydlake/helm-charts/issues/4
     - kind: fixed
-      description: "values schema required fields"
+      description: "service name in ingress. Thanks to b4u-mw"
+      url: https://github.com/slydlake/helm-charts/issues/3
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wireguard
