--- a/charts/wireguard/values.client.test.yaml
+++ b/charts/wireguard/values.client.test.yaml
@@ -30,7 +30,8 @@ replicaCount: 1
 # dnsPolicy: ClusterFirst
 # dnsConfig: {}
 
-
+# Expose the service on the host network
+# hostNetwork: true
 
 # deployment strategy type
 # NOTE: Set it to `Recreate` if you use a PersistentVolume that cannot be mounted on multiple pods
