--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,4 @@ updates:
   - package-ecosystem: "helm" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "hourly"
+      interval: "daily"
