wireguard: changed to MIT license, formating

--- a/charts/wireguard/Chart.yaml
+++ b/charts/wireguard/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wireguard
 description: "Using the offical linuxserver/wireguard image with almost any environment variables for K8S. Supporting server and client mode."
 type: application
-version: 0.1.12
+version: 0.1.13
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wireguard/app.png
 home: https://github.com/slydlake/helm-charts
 maintainers:
@@ -11,7 +11,7 @@ sources:
   - https://github.com/slydlake/helm-charts
 annotations:
   artifacthub.io/category: security
-  artifacthub.io/license: GPL-3.0
+  artifacthub.io/license: MIT
   artifacthub.io/links: |
     - name: SlyCharts GitHub Repository
       url: https://github.com/slydlake/helm-charts/tree/main/charts/wireguard
@@ -22,16 +22,13 @@ annotations:
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
     - kind: changed
-      description: "No force of storageClass or existingClaim (by using default class)"
-      url: https://github.com/slydlake/helm-charts/issues/2
-    - kind: added
-      description: "hostNetwork"
-      url: https://github.com/slydlake/helm-charts/issues/1
+      description: "changed to MIT license"
+    - kind: changed
+      description: "Formating of values.yaml"
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wireguard
       image: docker.io/linuxserver/wireguard:latest
-  category: Security
 keywords:
   - wireguard
   - vpn
