--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,19 +10,8 @@ updates:
     schedule:
       interval: "weekly"
     ignore:
-      # Ignore ALL container image updates in values.yaml files
-      - dependency-name: "*"
-  - package-ecosystem: "helm"
-    directory: "/charts/wg-easy"
-    schedule:
-      interval: "weekly"
-    ignore:
-      # Ignore ALL container image updates in values.yaml files
-      - dependency-name: "*"
-  - package-ecosystem: "helm"
-    directory: "/charts/wireguard"
-    schedule:
-      interval: "weekly"
-    ignore:
-      # Ignore ALL container image updates in values.yaml files
-      - dependency-name: "*"
+      # Ignore container images in values.yaml, but allow Chart.yaml dependencies
+      - dependency-name: "docker.io/wordpress"
+      - dependency-name: "docker.io/mariadb"
+      - dependency-name: "docker.io/memcached"
+      - dependency-name: "lusotycoon/apache-exporter"
